@@ -14,6 +14,9 @@ Changes in version 0.8-6 (??-0?-2013)
 
 - Improved documentation.
 
+- Using RCallServicesREngineWrapper to eval each expression in the environment 
+  gMCP:::gMCPenv instead of the global environment. 
+
 
 Changes in version 0.8-5 (18-07-2013)
 =====================================
